--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Practicas jQuery</title>
 </head>
 <body>
     <script>
         $(document).ready(function() {
-      
+          $("#target1").css("color", "red");
+          $("#target1").prop("disabled", true);
+          $("#target4").remove();
+          $("#target2").appendTo("#right-well");
+          $("#target5").clone().appendTo("#left-well");
+          $("#target1").parent().css("background-color", "red");
+          $("#right-well").children().css("color", "orange");
+          $("#left-well").children().css("color", "green");
+          $(".target:nth-child(2)").addClass("animated bounce");
+          $(".target:even").addClass("animated shake");
+          $("body").addClass("animated hinge");
         });
-    </script>
+      </script>
 
     <!-- Cambia solo el código encima de esta línea -->
     <div class="container-fluid">
